show timestamp on dashboard admin page

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -203,6 +203,7 @@
                     <thead class="py-3 thead-light">
                         <tr>
                             <th scope="col">No. Pendaftaran</th>
+                            <th scope="col">Tgl Daftar</th>
                             <th scope="col">Nama Lengkap</th>
                             <th scope="col">Nama Orang Tua</th>
                             <th scope="col">Asal Sekolah</th>
@@ -216,8 +217,12 @@
                         {% for s in participant %}
                             <tr>
                                 <td>
-                                    <h5><span class="ml-3 badge badge-secondary">{{ s.registration_number }}</span></h5>
+                                    <h5>
+                                        <span class="ml-3 badge badge-secondary">{{ s.registration_number }}</span>
+                                        <span class="ml-3 badge badge-secondary">{{ s.account.majorstudent.first_major }}</span>
+                                    </h5>
                                 </td>
+                                <td>{{ s.created_at|date:"d/m/Y" }}</td>
                                 <td><p class="mb-2">
                                         <a href="{% url 'participant-detail' s.account.pk %}">{{ s.full_name|title  }}</a>
                                         {% if s.verified %}
