add "OPES" in program section

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -351,6 +351,17 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-8 col-md-12 ml-auto">
+                    <div class="card-program my-4 right">
+                        <img loading="lazy" src="{% static 'homepage/images/opes.jpg' %}" class="mb-4 mb-md-0" alt="tahfidz">
+                        <div class="pl-4">
+                            <h3 class="font-weight-bold">Beasiswa OPES</h3>
+                            <p>Buat kamu yang ingin melanjutkan pendidikan ke Telkom Univerity, tidak usah khawatir dan takut, karena SMK Telkom Bandung bersama dengan Telkom University kampus swasta No. 1 di Indonesia, memiliki program beasiswa untuk 10 orang lulusan terbaik SMK Telkom Bandung setiap tahunnya.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
