update "patriot" description

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -347,7 +347,9 @@
                         <img loading="lazy" src="{% static 'homepage/images/patriot.jpg' %}" class="mb-4 mb-md-0 order-md-2" alt="patriot">
                         <div class="pr-4">
                             <h3 class="font-weight-bold order-md-1">PATRIOT</h3>
-                            <p>PATRIOT adalah Pendidikan Integritas dan Orientasi Kedisiplinan yaitu rangkaian kegiatan mula bagi siswa-siswi baru di SMK Telkom Bandung. Tujuan dilaksanakannya kegiatan ini adalah untuk terbentuknya peserta didik SMK Telkom Bandung yang berkarakter tangguh, berintegritas, dan disiplin.</p>
+                            <p>
+                                Buat kamu yang ingin melanjutkan pendidikan ke Telkom University, tidak usah khawatir dan takut, karena SMK Telkom Bandung bersama dengan Telkom University kampus swasta No. 1 di Indonesia, memiliki kerja sama dalam program pemberian beasiswa untuk 10 orang lulusan terbaik SMK Telkom Bandung setiap tahunnya.
+                            </p>
                         </div>
                     </div>
                 </div>
