send whatsapp notification after user registered

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -48,9 +48,9 @@
                 {% if form.username.value %}
                 <input type="text" name="{{ form.username.name }}" id="inputUsername" value="{{ form.username.value }}" class="form-control" placeholder="Nomor Pendaftaran" required autofocus>
                 {% else %}
-                <input type="text" name="{{ form.username.name }}" id="inputUsername" class="form-control" placeholder="Nomor HP Calon Siswa" required autofocus>
+                <input type="text" name="{{ form.username.name }}" id="inputUsername" class="form-control" placeholder="Username/Nomor HP Calon Siswa" required autofocus>
                 {% endif %}
-                <label for="inputUsername">Nomor HP Calon Siswa</label>
+                <label for="inputUsername">Username/Nomor HP Calon Siswa</label>
             </div>
 
             <div class="form-label-group">
