--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -60,8 +60,8 @@
     </div>
     <!-- END SECTION KELEBIHAN -->
 
-    <!-- SECTION 2 -->
-    <section id="section-2">
+    <!-- SECTION JURUSAN -->
+    <section id="section-jurusan">
         <div class="container">
             <div class="row justify-content-center align-items-center">
 
@@ -92,9 +92,7 @@
             </div>
         </div>
     </section>
-    <!-- END SECTION 2 -->
-    <!-- SECTION 3 -->
-    <section id="section-3">
+    <section id="section-jurusan-2">
         <div class="container">
 
             <div class="row align-items-center my-5 py-5 my-lg-4 py-lg-4 justify-content-center">
@@ -191,10 +189,10 @@
             </div>
         </div>
     </section>
-    <!-- END SECTION 3 -->
+    <!-- END JURUSAN -->
 
-    <!-- SECTION kuota tersisa -->
-    <section class="section-kuota-tersisa">
+    <!-- SECTION KUOTA TERSISA -->
+    <section id="section-kuota">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 my-5 text-center text-lg-left">
@@ -224,10 +222,10 @@
             </div>
         </div>
     </section>
-    <!-- END SECTION kuota tersisa -->
+    <!-- END SECTION KUOTA TERSISA -->
 
-    <!-- SECTION 4 -->
-    <section id="section-4">
+    <!-- SECTION ALUR PENDAFTARAN -->
+    <section id="section-alur">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mx-auto mx-lg-0">
@@ -252,9 +250,9 @@
             </div>
         </div>
     </section>
-    <!-- END SECTION 4 -->
-    <!-- SECTION 5 -->
-    <section id="section-5">
+    <!-- END SECTION KUOTA TERSISA -->
+    <!-- SECTION BERKAS -->
+    <section id="section-berkas">
         <div class="container">
             <div class="row ">
                 <div class="col-lg-7 col-md-10 mx-auto mx-lg-0">
@@ -312,10 +310,10 @@
             </div>
         </div>
     </section>
-    <!-- END SECTION 5 -->
+    <!-- END SECTION BERKAS -->
 
-    <!-- SECTION 6 -->
-    <section id="section-6">
+    <!-- SECTION PROGRAM -->
+    <section id="section-program">
         <div class="container">
             <div class="row ">
                 <div class="col-lg-6 col-md-10 mx-auto mx-lg-0">
@@ -369,7 +367,7 @@
             
         </div>
     </section>
-    <!-- END SECTION 6 -->
+    <!-- END SECTION PROGRAM -->
 
     <!-- Banner ekskul -->
     <div class="container mt-5 mb-3">
@@ -379,8 +377,8 @@
                 <div class="text-center text-lg-left">
                     <h1 class="text-white heading-section mb-3">Ekstrakurikuler & Komunitas</h1>
                     <p class="text-white">SMK Telkom Bandung punya banyak ekstrakurikuler & komunitas untuk mengembangkan minat dan bakat peserta didik di bidang non akademik</p>
-                    <a href="#" class="btn btn-light rounded-pill py-3 px-4 mr-md-3 mb-3 mb-md-0">Daftar Ekskul</a>
-                    <a href="#" class="btn btn-light rounded-pill py-3 px-4">Daftar Komunitas</a>
+                    <a href="ekskul.html" class="btn btn-light rounded-pill py-3 px-4 mr-md-3 mb-3 mb-md-0">Daftar Ekskul</a>
+                    <a href="komunitas.html" class="btn btn-light rounded-pill py-3 px-4">Daftar Komunitas</a>
                 </div>
                 </div>
                 
@@ -393,11 +391,11 @@
     <!-- end Banner ekskul -->
     
     <!-- SECTION PRESTASI -->
-    <section id="prestasi">
+    <section id="section-prestasi">
         <div class="container-fluid bg-prestasi py-3">
             <div class="py-5 text-center">
                 <h1 class="text-white heading-section mb-3">Prestasi Siswa-siswi <br> SMK Telkom Bandung</h1>
-                <a href="#" class="btn btn-light rounded-pill p-3">Lihat semua prestasi</a>
+                <a href="prestasi.html" class="btn btn-light rounded-pill p-3">Lihat semua prestasi</a>
             </div>
         </div>
         <div class="glide">
@@ -488,8 +486,8 @@
     </section>
     <!-- END SECTION PRESTASI -->
 
-    <!--SECTION 7 -->
-    <section id="section-7">
+    <!--SECTION JADWAL -->
+    <section id="section-jadwal">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12">
@@ -536,10 +534,10 @@
             </div>
         </div>
     </section>
-    <!-- END SECTION 7 -->
+    <!-- END SECTION JADWAL -->
 
-    <!-- SECTION 8 -->
-    <section id="section-8">
+    <!-- SECTION BIAYA -->
+    <section id="section-biaya">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10 col-md-12 p-4 bg-white wrapper-biaya">
@@ -560,10 +558,10 @@
             </div>
         </div>
     </section>
-    <!-- END SECTION 8 -->
+    <!-- END SECTION BIAYA -->
 
     <!-- SECTION TESTIMONIALS -->
-    <section id="section-testimonials">
+    <section id="section-testimonial">
         <div class="container">
             <h1 class="heading-section mb-5">Apa Kata Mereka Tentang <br> <span class="red-text">SMK Telkom Bandung?</span></h1>
             <div id="testimonial-carousel" class="carousel slide my-4" data-ride="carousel" data-interval="false">
@@ -605,7 +603,7 @@
             </button>
         </div>
     </section>
-    <!-- END SECTION TESTIMONIALS -->
+    <!-- END SECTION TESTIMONIAL -->
 
     <footer>
         <div class="container">
