--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -34,7 +34,7 @@
 
         {% block navbar %}
             <!-- NAVBAR -->
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+            <nav class="navbar navbar-expand-lg fixed-top">
                 <div class="container">
                     <a class="navbar-brand" href="{% url 'homepage' %}">
                         <img src="{% static 'homepage/images/logo.png' %}" width="120" alt="logo smk telkom bandung">
@@ -46,40 +46,62 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto align-items-start align-items-lg-center">
-                            <li class="nav-item mx-2">
-                                <a class="nav-link" href="#section-2">Program Studi</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-1" role="button" data-toggle="dropdown" aria-expanded="false">
+                                  Beranda
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown-1">
+                                  <a class="dropdown-item" href="{% url 'homepage' %}#section-jurusan">Jurusan</a>
+                                  <a class="dropdown-item" href="{% url 'homepage' %}#section-program">Program</a>
+                                  <a class="dropdown-item" href="{% url 'homepage' %}#section-testimonial">Testimonial</a>
+                                </div>
                             </li>
-                            <li class="nav-item mx-2">
-                                <a class="nav-link" href="#section-4">Alur pendaftaran</a>
+                            <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-2" role="button" data-toggle="dropdown" aria-expanded="false">
+                                Pendaftaran
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown-2">
+                                <a class="dropdown-item" href="{% url 'homepage' %}#section-kuota">Kuota Pendaftaran</a>
+                                <a class="dropdown-item" href="{% url 'homepage' %}#section-alur">Alur Pendaftaran</a>
+                                <a class="dropdown-item" href="{% url 'homepage' %}#section-berkas">Berkas Pendaftaran</a>
+                                <a class="dropdown-item" href="{% url 'homepage' %}#section-jadwal">Jadwal Pendaftaran</a>
+                                <a class="dropdown-item" href="{% url 'homepage' %}#section-biaya">Biaya Pendaftaran</a>
+                            </div>
                             </li>
-                            <li class="nav-item mx-2">
-                                <a class="nav-link" href="#section-5">Berkas</a>
+                            <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-3" role="button" data-toggle="dropdown" aria-expanded="false">
+                                Kegiatan
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown-3">
+                                <a class="dropdown-item" href="ekstakurikuler.html">Ekstrakurikuler</a>
+                                <a class="dropdown-item" href="komunitas.html">Komunitas</a>
+                            </div>
                             </li>
-                            <li class="nav-item mx-2">
-                                <a class="nav-link" href="#section-8">Biaya</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="prestasi.html">Prestasi</a>
                             </li>
-                            <li class="nav-item mx-2">
+                            <li class="nav-item">
                                 <a class="nav-link" href="{% url 'files-download' %}">Download</a>
                             </li>
                             {% if user.is_staff %}
-                                <li class="nav-item mx-2">
+                                <li class="nav-item mb-3 mb-lg-0">
                                     <a class="nav-link my-btn-outline-primary py-2 px-3 text-white" href="{% url 'logout' %}">Logout</a>
                                 </li>
-                                <li class="nav-item mx-2">
+                                <li class="nav-item">
                                     <a class="nav-link my-btn-primary py-2 px-3 text-white" href="{% url 'dashboard' %}">Dashboard</a>
                                 </li>
                             {% elif user.is_authenticated %}
-                                <li class="nav-item mx-2">
+                                <li class="nav-item mb-3 mb-lg-0">
                                     <a class="nav-link my-btn-primary py-2 px-3 text-white" href="{% url 'profile' %}">Profile</a>
                                 </li>
-                                <li class="nav-item mx-2">
+                                <li class="nav-item">
                                     <a class="nav-link my-btn-outline-primary py-2 px-3 text-white" href="{% url 'logout' %}">Logout</a>
                                 </li>
                             {% else %}
-                                <li class="nav-item mx-2">
+                                <li class="nav-item mb-3 mb-lg-0">
                                     <a class="nav-link my-btn-outline-primary py-2 px-3 text-white" href="{% url 'login' %}">Login</a>
                                 </li>
-                                <li class="nav-item mx-2">
+                                <li class="nav-item">
                                     <a class="nav-link my-btn-primary py-2 px-3 text-white" href="{% url 'register' %}">Daftar PPDB</a>
                                 </li>
                             {% endif %}
