add url to the homepage button

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -377,8 +377,8 @@
                 <div class="text-center text-lg-left">
                     <h1 class="text-white heading-section mb-3">Ekstrakurikuler & Komunitas</h1>
                     <p class="text-white">SMK Telkom Bandung punya banyak ekstrakurikuler & komunitas untuk mengembangkan minat dan bakat peserta didik di bidang non akademik</p>
-                    <a href="ekskul.html" class="btn btn-light rounded-pill py-3 px-4 mr-md-3 mb-3 mb-md-0">Daftar Ekskul</a>
-                    <a href="komunitas.html" class="btn btn-light rounded-pill py-3 px-4">Daftar Komunitas</a>
+                    <a href="{% url 'school_clubs' %}" class="btn btn-light rounded-pill py-3 px-4 mr-md-3 mb-3 mb-md-0">Daftar Ekskul</a>
+                    <a href="{% url 'school_community' %}" class="btn btn-light rounded-pill py-3 px-4">Daftar Komunitas</a>
                 </div>
                 </div>
                 
