--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -9,7 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.5.0/css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.5.0/css/glide.theme.min.css">
-    <link rel="stylesheet" href="{% static 'homepage/css/primaseru.css' %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static 'homepage/css/homepage.css' %}" type="text/css" media="screen" />
 {% endblock head %}
 
 {% block container %}
