--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -710,5 +710,5 @@
     <script type="text/javascript">
         const URL = "{% url 'school-cap-chart' %}"
     </script>
-    <script type="text/javascript" src="{% static 'homepage/js/home.js' %}"></script>
+    <script type="text/javascript" src="{% static 'homepage/js/homepage.js' %}"></script>
 {% endblock js %}
