remove similar model

--- a/templates/homepage/register.html
+++ b/templates/homepage/register.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block head %}
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="{% static 'homepage/css/primaseru.css' %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static 'homepage/css/homepage.css' %}" type="text/css" media="screen" />
     <link rel="stylesheet" href="{% static 'homepage/css/register.css' %}" type="text/css" media="screen" />
     <link rel="stylesheet" href="{% static 'css/school-list.css' %}" type="text/css" media="screen" />
     <!-- Font -->
