add url to the button

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -395,7 +395,7 @@
         <div class="container-fluid bg-prestasi py-3">
             <div class="py-5 text-center">
                 <h1 class="text-white heading-section mb-3">Prestasi Siswa-siswi <br> SMK Telkom Bandung</h1>
-                <a href="prestasi.html" class="btn btn-light rounded-pill p-3">Lihat semua prestasi</a>
+                <a href="{% url 'achievements' %}" class="btn btn-light rounded-pill p-3">Lihat semua prestasi</a>
             </div>
         </div>
         <div class="glide">
