add fields to the Participant model

--- a/templates/participant_profile/primaseru.html
+++ b/templates/participant_profile/primaseru.html
@@ -139,7 +139,7 @@
             {% if lms %}
             <!-- Nav Item - Test -->
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'participant-lms' %}">
+                <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-edit"></i>
                     <span>Tes Minat Bakat</span></a>
             </li>
