--- a/templates/dashboard/dashboard_base.html
+++ b/templates/dashboard/dashboard_base.html
@@ -111,6 +111,14 @@
                     <span class="ml-1">Edit No. Pendaftaran</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="{% url 'delete-all-participant' %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-recycle" viewBox="0 0 16 16">
+                      <path d="M9.302 1.256a1.5 1.5 0 0 0-2.604 0l-1.704 2.98a.5.5 0 0 0 .869.497l1.703-2.981a.5.5 0 0 1 .868 0l2.54 4.444-1.256-.337a.5.5 0 1 0-.26.966l2.415.647a.5.5 0 0 0 .613-.353l.647-2.415a.5.5 0 1 0-.966-.259l-.333 1.242-2.532-4.431zM2.973 7.773l-1.255.337a.5.5 0 1 1-.26-.966l2.416-.647a.5.5 0 0 1 .612.353l.647 2.415a.5.5 0 0 1-.966.259l-.333-1.242-2.545 4.454a.5.5 0 0 0 .434.748H5a.5.5 0 0 1 0 1H1.723A1.5 1.5 0 0 1 .421 12.24l2.552-4.467zm10.89 1.463a.5.5 0 1 0-.868.496l1.716 3.004a.5.5 0 0 1-.434.748h-5.57l.647-.646a.5.5 0 1 0-.708-.707l-1.5 1.5a.498.498 0 0 0 0 .707l1.5 1.5a.5.5 0 1 0 .708-.707l-.647-.647h5.57a1.5 1.5 0 0 0 1.302-2.244l-1.716-3.004z"/>
+                    </svg>
+                    <span class="ml-1">Reset Primaseru</span>
+                </a>
+            </li>
             <li class="nav-item mt-3">
                 <a class="nav-link " href="{% url 'logout' %}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
@@ -142,7 +150,7 @@
                 </div>
                 {% if messages %}
                     {% for m in messages%}
-                        <div class="bg-white mt-4 p-3 rounded shadow-sm">
+                        <div class="bg-white m-4 p-3 rounded shadow-sm">
                             <div class="m-0 alert alert-{{ m.tags }}">
                                 <b>{{m}}</b>
                             </div>
