--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -137,7 +137,8 @@
 
             <div class="row align-items-center my-5 py-5 my-lg-4 py-lg-4 my-lg- justify-content-center">
                 <div class="col-lg-6 col-md-10 order-lg-2 mb-3">
-                    <img loading="lazy" src="{% static 'homepage/images/multimedia.jpg' %}" class="w-100" alt="mm">
+                    <!-- <img loading="lazy" src="{% static 'homepage/images/multimedia.jpg' %}" class="w-100" alt="mm"> -->
+                    <img loading="lazy" src="{% static 'homepage/images/model-animasi.png' %}" class="w-100" alt="animasi">
                 </div>
                 <div class="col-lg-6 col-md-10 order-lg-1">
                     <article>
