--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -64,23 +64,23 @@
         <div class="container">
             <div class="row justify-content-center align-items-center">
 
-                <div class="col mr-4">
+                <div class="col-12 col-sm mr-4">
                     <h1 class="text-center font-weight-bold mb-3">Konsentrasi Keahlian yang bisa kamu pilih <span class="red-text">sesuai passion.</span></h1>
                 </div>
 
-                <div class="col mt-3 mt-sm-0">
+                <div class="col-12 col-sm mt-3 mt-sm-0">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col col-sm-4">
                             <div class="box-jurusan">
                                 <img loading="lazy" src="{% static 'homepage/images/animasi-logo.png' %}" alt="logo animasi" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col col-sm-4">
                             <div class="box-jurusan">
                                 <img loading="lazy" src="https://smktelkom-bdg.sch.id/wp-content/uploads/2022/09/dkv.svg" alt="logo dkv" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col col-sm-4">
                             <div class="box-jurusan">
                                 <img loading="lazy" src="https://smktelkom-bdg.sch.id/wp-content/uploads/2022/09/tjkt.svg" alt="logo tjkt" class="img-fluid">
                             </div>
@@ -247,7 +247,8 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-10 pl-lg-5 d-none d-lg-block">
-                    <img loading="lazy" src="{% static 'homepage/images/berkas-section.jpg' %}" class="w-100" alt="gambar berkas">
+                    <!-- <img loading="lazy" src="{% static 'homepage/images/berkas-section.jpg' %}" class="w-100" alt="gambar berkas"> -->
+                    <img loading="lazy" src="{% static 'homepage/images/virtual-talents.png' %}" class="w-100" alt="gambar berkas">
                 </div>
             </div>
 
